kubernetes/deployment-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: novapay-blue
  namespace: novapay
spec:
  replicas: 1
  selector:
    matchLabels:
      app: novapay
      version: blue
  template:
    metadata:
      labels:
        app: novapay
        version: blue
    spec:
      containers:
      - name: novapay
        image: novapay-app:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
