kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: novapay-service
  namespace: novapay
spec:
  selector:
    app: novapay
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
